--- a/django/stats/templates/stats/squads.html
+++ b/django/stats/templates/stats/squads.html
@@ -157,7 +157,7 @@
                     {% endfor %}
                     </div>
 
-                    <div class="potw-aspirants-footer">Badges will be awarded: {{ squad.upcoming_player_of_the_week.competition_end }}</div>
+                    <div class="potw-aspirants-footer">Badges will be awarded: {{ squad.upcoming_player_of_the_week.challenge_end }}</div>
 
                 {% endif %}
 
