--- a/django/accounts/templates/accounts/login.html
+++ b/django/accounts/templates/accounts/login.html
@@ -32,7 +32,7 @@
                 <td>
                     {{ field }}
                     {{ field.errors }}
-                    {{ field.help_text }}
+                    <p class="field-help-text">{{ field.help_text }}</p>
                 </td>
             </tr>
 
