Hide markers on form curve

--- a/django/stats/templates/stats/player.html
+++ b/django/stats/templates/stats/player.html
@@ -184,6 +184,7 @@ function updatePlot( sigma )
         {
             x: matchNumList,
             y: pv_smooth,
+            mode: 'lines',
             name: 'Form',
             line: {
                 shape: 'spline'
