Add missing `</div>`

--- a/django/stats/templates/stats/squads.html
+++ b/django/stats/templates/stats/squads.html
@@ -83,6 +83,8 @@
                     <div class="legend-item-description">Be the red lantern in your team, with a substantial deficit in ADR.</div>
                 </div>
 
+            </div>
+
         </div>
 
         {% if squad.upcoming_player_of_the_week %}
