--- a/django/stats/static/stats.css
+++ b/django/stats/static/stats.css
@@ -105,6 +105,7 @@ div.profile-card .profile-buddies {
     padding: 0.5em 0 0.3em 0;
     margin-top: 8mm;
     line-height: 1.2em;
+    font-family: Arial;
 }
 
 div.profile-card .profile-buddy-performance {
