--- a/django/stats/templates/stats/profile-card.html
+++ b/django/stats/templates/stats/profile-card.html
@@ -9,12 +9,14 @@
     <div class="profile-buddies">
         {% if player.best_buddy_performance_increase >= 1 %}
 
-            Performs <span class="profile-buddy-performance">{{ player.best_buddy_performance_increase|floatformat:0 }}%</span> better with <span class="profile-buddy-name">{{ player.best_buddy.name }}</span>.
+            Performs <span class="profile-buddy-performance">{{ player.best_buddy_performance_increase|floatformat:0 }}%</span>
+            better with <a href="{% url 'player' squad.uuid player.best_buddy.steamid %}" class="profile-buddy-name">{{ player.best_buddy.name }}</a>.
 
         {% endif %}
         {% if player.worst_buddy_performance_decrease >= 1 %}
 
-            Performs <span class="profile-buddy-performance">{{ player.worst_buddy_performance_decrease|floatformat:0 }}%</span> worse with <span class="profile-buddy-name">{{ player.worst_buddy.name }}</span>.
+            Performs <span class="profile-buddy-performance">{{ player.worst_buddy_performance_decrease|floatformat:0 }}%</span>
+            worse with <a href="{% url 'player' squad.uuid player.worst_buddy.steamid %}" class="profile-buddy-name">{{ player.worst_buddy.name }}</a>.
 
         {% endif %}
     </div>
