--- a/django/stats/static/stats.css
+++ b/django/stats/static/stats.css
@@ -114,18 +114,30 @@ div.profile-card .profile-buddy-performance {
 
 div.profile-card .profile-buddy-name {
     font-style: normal;
-    background-color: #999;
     color: white;
     padding-left: 0.4em;
     padding-right: 0.4em;
-    border-radius: 1em;
     white-space: nowrap;
     text-decoration: none;
+    position: relative;
+    z-index: 0;
 }
 
-div.profile-card .profile-buddy-name:hover {
-    background-color: #666;
+div.profile-card .profile-buddy-name::before {
+    border-radius: 1em;
+    background-color: #999;
+    position: absolute;
     text-decoration: none;
+    left: 0;
+    right: 0;
+    top: 0.05em;
+    bottom: 0.05em;
+    content: '';
+    z-index: -1;
+}
+
+div.profile-card .profile-buddy-name:hover::before {
+    background-color: #666;
 }
 
 div.profile-card .profile-stats {
