--- a/django/stats/templates/stats/squads.html
+++ b/django/stats/templates/stats/squads.html
@@ -80,7 +80,7 @@
                 <div class="legend-item">
                     <div style="background-image: url('{% static 'badges' %}/peach.png');" class="badge"></div>
                     <div class="legend-item-label">Peach Price</div>
-                    <div class="legend-item-description">Be the red lantern in your team, with a substantial deficit in ADR.</div>
+                    <div class="legend-item-description">Be the red lantern of your team with <span class="nowrap">K/D &leq;0.5</span>, <span class="nowrap">ADR &leq;50</span>, and a substantial deficit in ADR.</div>
                 </div>
 
             </div>
