Fix bug when there is not squad buddy performance to report

--- a/django/stats/templates/stats/player.html
+++ b/django/stats/templates/stats/player.html
@@ -95,6 +95,7 @@ const matchDateList = [ {% for mp in participations %}
 
             <div id="pv-plot" style="width:600px; height: 280px;"></div>
 
+            {% if squad_buddy_performances %}
             <h2>Performance with squad buddies</h2>
             
             <div id="squad-buddies-plot">
@@ -136,6 +137,7 @@ const matchDateList = [ {% for mp in participations %}
                 </div>
 
             </div>
+            {% endif %}
 
             {% if badges.potw %}
 
