Add John Wick Award badge
Fix #26

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/kosmotive/cs2pb?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/django/stats/templates/stats/squads.html
+++ b/django/stats/templates/stats/squads.html
@@ -83,6 +83,12 @@
                     <div class="legend-item-description">Be the red lantern of your team with <span class="nowrap">K/D &leq;0.5</span>, <span class="nowrap">ADR &leq;50</span>, and a substantial deficit in ADR.</div>
                 </div>
 
+                <div class="legend-item">
+                    <div style="background-image: url('{% static 'badges' %}/john-wick-award.png');" class="badge"></div>
+                    <div class="legend-item-label">John Wick Award</div>
+                    <div class="legend-item-description">Achieve a kills per round ratio much higher than your average damage per round (ADR).</div>
+                </div>
+
             </div>
 
         </div>
