--- a/django/stats/templates/stats/squads.html
+++ b/django/stats/templates/stats/squads.html
@@ -86,7 +86,7 @@
                 <div class="legend-item">
                     <div style="background-image: url('{% static 'badges' %}/john-wick-award.png');" class="badge"></div>
                     <div class="legend-item-label">John Wick Award</div>
-                    <div class="legend-item-description">Achieve a kills per round ratio much higher than your average damage per round (ADR).</div>
+                    <div class="legend-item-description">Gain a surprisingly high K/D ratio, compared to the ADR.</div>
                 </div>
 
             </div>
