--- a/django/templates/base.html
+++ b/django/templates/base.html
@@ -104,6 +104,9 @@ function autoscale() {
         <b>CS2 Performance Board</b>
         {% if version %}
             <br>{{ version.sha|slice:"0:7" }} @ {{ version.date }}
+            {% if version.branch != "master" %}
+                <br><span class="branch-warning" title="This instance is currently running a branch with experimental features. Stability may be affected.">Experimental branch</span>
+            {% endif %}
         {% endif %}
         <p>contribute on
         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" style="margin-left: 0.2em; aspect-ratio: 1; height: 1.2rem;" viewBox="0 0 16 16">
