Employ `add_globals_to_context` in all views (some were missing)

--- a/django/static/base.css
+++ b/django/static/base.css
@@ -58,6 +58,8 @@ body, input, button {
     display: inline-block;
     padding-left: 0.5em;
     padding-right: 0.5em;
+    padding-top: 0.1em;
+    padding-bottom: 0.1em;
     margin-top: 0.5em;
 }
 
